--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,4 +2,4 @@
   headline: "Our paper is accepted to AAAI 2023"
 
 - date: June 7 2021
-  headline: "We host the <a href='https://news.uark.edu/articles/57146/college-of-engineering-offers-applied-machine-learning-intensive-for-summer'>Google Applied Machine Learning Intensive (AMLI)</a> bootcamp with two other campuses, the University of Kentucky and Morgan State University."
+  headline: "We host the <a href='https://news.uark.edu/articles/57146/college-of-engineering-offers-applied-machine-learning-intensive-for-summer'>Google Applied Machine Learning Intensive (AMLI)</a> bootcamp with two other campuses."
