--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -11,7 +11,7 @@
   group: 2
 
 - name: Minh Tran
-  photo: minh_tran.jpg
+  photo: minh_tran.png
   info: Ph.D. Student
   url: minh_tran
   group: 2
