--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -34,8 +34,8 @@
   photo: kashu_yamazaki.jpg
   url: kashu_yamazaki
 - group: 3
-  info: Sophomore
-  name: Undergraduate Honor Student
+  info: Undergraduate Honor Student
+  name: Taisei Hanyu
   photo: no_pic.png
   url: taisei_hanyu
 - group: 4
