update thang's profile

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -90,6 +90,6 @@
   url: adrian_luis
 - group: 2
   info: Ph.D. Student
-  name: Thang Pham
+  name: Trong Thang Pham
   photo: thang_pham.png
   url: thang_pham
