--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -79,7 +79,7 @@
   photo: hieu_hoang.png
   url: hieu_hoang
 - group: 2
-  info: Ph.D. Student
+  info: Master's Student
   name: Tan Bui
   photo: tan_bui.png
   url: tan_bui
