--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -48,8 +48,8 @@
   name: Gustavo Gracia
   photo: gustavo_gracia.png
   url: gustavo_gracia
-- group: 3
-  info: Undergraduate Honor Student
+- group: 2
+  info: Ph.D. Student
   name: Chiyou Vang
   photo: chiyou_vang.png
   url: chiyou_vang
