add vuong profile

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -93,3 +93,8 @@
   name: Trong Thang Pham
   photo: thang_pham.png
   url: thang_pham
+- group: 2
+  info: Master's Student
+  name: Ngoc Vuong Ho
+  photo: vuong_ho.jpg
+  url: vuong_ho
