--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -95,6 +95,6 @@
   url: thang_pham
 - group: 2
   info: Master's Student
-  name: Ngoc Vuong Ho
+  name: Ngoc-Vuong Ho
   photo: vuong_ho.jpg
   url: vuong_ho
