--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -28,8 +28,8 @@
   name: Thinh Phan
   photo: thinh_phan.jpg
   url: thinh_phan
-- group: 2
-  info: Master's Student
+- group: 7
+  info: Research Associate
   name: Kashu Yamazaki
   photo: kashu_yamazaki.jpg
   url: kashu_yamazaki
