Marta Veganzones profile update

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -88,6 +88,11 @@
   name: Adrian Luis
   photo: adrian_luis.png
   url: adrian_luis
+- group: 2
+  info: Master's Student
+  name: Marta Veganzones
+  photo: marta_veganzones.png
+  url: marta_veganzones
 - group: 1
   info: Ph.D. Student
   name: Trong Thang Pham
