--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -66,7 +66,7 @@
 - group: 2
   info: Master's Student
   name: Marta Veganzones
-  photo: marta_veganzones.png
+  photo: marta_veganzones.jpg
   url: marta_veganzones
 - group: 1
   info: Ph.D. Student
