Update team_members.yml. Added Frederick

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -78,3 +78,8 @@
   name: Ngoc-Vuong Ho
   photo: vuong_ho.jpg
   url: vuong_ho
+- group: 3
+  info: Undergraduate Student
+  name: Frederick Bumgarner
+  photo: frederick_bumgarner.png
+  url: frederick_bumgarner
