--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -86,5 +86,5 @@
 - group: 3
   info: Undergraduate Student
   name: Ethan Coffman
-  photo: coffman.png
+  photo: coffman.jpg
   url: ethan_coffman
