--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -83,3 +83,8 @@
   name: Frederick Bumgarner
   photo: frederick_bumgarner.png
   url: frederick_bumgarner
+- group: 3
+  info: Undergraduate Student
+  name: Isaac Phillips
+  photo: isaac_phillips.png
+  url: isaac_phillips
