Adding Esteban Duran Data

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -83,3 +83,8 @@
   name: Frederick Bumgarner
   photo: frederick_bumgarner.png
   url: frederick_bumgarner
+- group: 2
+  info: Master's Student
+  name: Esteban Duran Marti
+  photo: esteban_duran.jpeg
+  url: esteban_duran
