--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -83,3 +83,8 @@
   name: Frederick Bumgarner
   photo: frederick_bumgarner.png
   url: frederick_bumgarner
+- group: 3
+  info: Undergraduate Honors Student
+  name: Andrew Lockett
+  photo: andrew_lockett.png
+  url: andrew_lockett
