--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -86,5 +86,5 @@
 - group: 3
   info: Undergraduate Student
   name: Isaac Phillips
-  photo: isaac_phillips.png
+  photo: isaac_phillips.jpg
   url: isaac_phillips
