--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -31,7 +31,7 @@
 - group: 3
   info: Undergraduate Honor Student
   name: Taisei Hanyu
-  photo: no_pic.png
+  photo: taisei_hanyu.jpg
   url: taisei_hanyu
 - group: 8
   info: Meta
