--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -78,3 +78,9 @@
   name: Ngoc-Vuong Ho
   photo: vuong_ho.jpg
   url: vuong_ho
+- group: 3
+  info: Undergraduate Student
+  name: Winston Bounsavy
+  photo: winston_bounsavy.jpg
+  url: winston_bounsavy
+
