--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -103,3 +103,8 @@
   name: Ethan Coffman
   photo: coffman.jpg
   url: ethan_coffman
+- group: 3
+  info: Undergraduate Student
+  name: Reagan Clark
+  photo: reagan_clark.jpg
+  url: reagan_clark
