--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -34,7 +34,7 @@
   photo: taisei_hanyu.jpg
   url: taisei_hanyu
 - group: 8
-  info: Meta
+  info: BASc (graduated 2022) - Meta
   name: Gustavo Gracia
   photo: gustavo_gracia.png
   url: gustavo_gracia
@@ -44,12 +44,12 @@
   photo: chiyou_vang.png
   url: chiyou_vang
 - group: 8
-  info: Undergraduate Honor Student
+  info: BSc (graduated 2023)
   name: Kala Rohit
   photo: kala_rohit.png
   url: kala_rohit
 - group: 8
-  info: Undergraduate Student
+  info: BSc (graduated 2023)
   name: Noah Core
   photo: noah_core.png
   url: noah_core
@@ -59,7 +59,7 @@
   photo: tan_bui.png
   url: tan_bui
 - group: 8
-  info: MSc (graduated 2023)
+  info: MSc (graduated 2023) - Dell
   name: Adrian Luis
   photo: adrian_luis.png
   url: adrian_luis
