--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -3,7 +3,7 @@
   description: 
   authors: K. Yamazaki, K. Vo, S. Truong, B. Raj, N. Le
   link:
-    url: 
+    url: https://ojs.aaai.org/index.php/AAAI/article/view/25412
     display:  K. Yamazaki, K. Vo, S. Truong, B. Raj, N. Le, AAAI, 2023
   type: 1
   news2:
