update vuonghn's profile

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -75,7 +75,7 @@
   url: thang_pham
 - group: 2
   info: Master's Student
-  name: Ngoc-Vuong Ho
+  name: Vuong Ho
   photo: vuong_ho.jpg
   url: vuong_ho
 - group: 3
