--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -108,3 +108,8 @@
   name: Reagan Clark
   photo: reagan_clark.jpg
   url: reagan_clark
+- group: 4
+  info: May 2022
+  name: Kevin Joo
+  photo: no_pic.png
+  url: kevin_joo
