update vuong's profile

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -51,8 +51,8 @@
 - group: 2
   info: Since 2023
   name: Vuong Ho
-  photo: vuong_ho.jpg
-  url: vuong_ho
+  photo: vvuonghn.jpg
+  url: vvuonghn
 - group: 3
   info: Since Aug 2023
   name: Frederick Bumgarner
