--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -86,7 +86,7 @@
 - group: 4
   info: May 2022 - Aug 2022
   name: Kevin Joo
-  photo: no_pic.png
+  photo: kevin_joo.jpg
   url: kevin_joo
 - group: 8
   info: MSc (graduated 2023) - Dell
