--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -8,7 +8,7 @@
   type: 1
   news2:
 
-- title: "I-AI: A Controllable & Interpretable AI System for Decoding Radiologists’ Intense Focus for Accurate CXR Diagnoses"
+- title: "I-AI: A Controllable and Interpretable AI System for Decoding Radiologists Intense Focus for Accurate CXR Diagnoses"
   image: phametal_wacv2024.png
   description: 
   authors: T. Pham, J. Brecheisen, A. Nguyen, H. Nguyen, N. Le
