--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -24,7 +24,7 @@
   photo: thang_pham.png
   url: thang_pham
 - group: 1
-  info: Ph.D. Student
+  info: Since 2023
   name: Chiyou Vang
   photo: chiyou_vang.png
   url: chiyou_vang
@@ -34,7 +34,7 @@
   photo: kashu_yamazaki.jpg
   url: kashu_yamazaki
 - group: 3
-  info: Undergraduate Honor Student
+  info: Since 2022
   name: Taisei Hanyu
   photo: taisei_hanyu.jpg
   url: taisei_hanyu
@@ -49,7 +49,7 @@
   photo: marta_veganzones.png
   url: marta_veganzones
 - group: 3
-  info: Undergraduate Student
+  info: Since 2022
   name: Winston Bounsavy
   photo: winston_bounsavy.jpg
   url: winston_bounsavy
@@ -69,22 +69,22 @@
   photo: frederick_bumgarner.png
   url: frederick_bumgarner
 - group: 3
-  info: Undergraduate Student
+  info: Since 2024
   name: Isaac Phillips
   photo: isaac_phillips.jpg
   url: isaac_phillips
 - group: 3
-  info: Undergraduate Honors Student
+  info: Since 2024
   name: Andrew Lockett
   photo: andrew_lockett.png
   url: andrew_lockett
 - group: 3
-  info: Undergraduate Student
+  info: Since 2024
   name: Ethan Coffman
   photo: coffman.jpg
   url: ethan_coffman
 - group: 3
-  info: Undergraduate Student
+  info: Since 2024
   name: Reagan Clark
   photo: reagan_clark.jpg
   url: reagan_clark
