Fixing naming error

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -389,7 +389,7 @@
   news2:
   year: 2022
 
-- title: "Contextual Explainable Video Representation:\\Human Perception-based Understanding"
+- title: "Multimodality Multi-Lead ECG Arrhythmia Classification using Self-Supervised Learning"
   image: t_phan_bhi22.png
   description: 
   authors:  T. Phan, D. Le, P. Brijesh, D. Adjeroh, J. Wu, M. Olgaard Jensen, N. Le
